--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
     <head></head>
     <body>
         <h1>hello world!</h1>
-        <p>dev branch</p>
+        <p>copy here</p>
     </body>
 </html>
